--- a/MicrosoftGraph_Security_API_Sample/Views/Home/_SubscriptionPartialView.cshtml
+++ b/MicrosoftGraph_Security_API_Sample/Views/Home/_SubscriptionPartialView.cshtml
@@ -9,7 +9,7 @@
     {
         providerList = new[] { "All" };
     }
-    var SubscriptionResults = Session["GetSubscriptionResults"] as SubscriptionResultsModel;
+    var SubscriptionResults = Session["GetSubscriptionResults"] as SubscriptionCollection;
 }
 <div class="container-fluid">
     <h2>Subscribe and listen to alert notifications</h2>
